Dynamically generate section based on input

--- a/output.tex
+++ b/output.tex
@@ -147,9 +147,9 @@
       %----------HEADING----------
     
         \begin{center}
-            {\Huge \scshape Bhargav} \\ \vspace{1pt}
-            Jangareddigudem,ap \\ \vspace{1pt}
-            \small \href{tel:+8179327201}{ \raisebox{-0.1\height}\faPhone\ \underline{+8179327201} ~} \href{mailto:bhargavvvenkat515@gmail.com}{\raisebox{-0.2\height}\faEnvelope\ \underline{bhargavvvenkat515@gmail.com}} ~ 
+            {\Huge \scshape Kumar} \\ \vspace{1pt}
+            Jangareddigudem,Andhra \\ \vspace{1pt}
+            \small \href{tel:+123445}{ \raisebox{-0.1\height}\faPhone\ \underline{+123445} ~} \href{mailto:bhargavvvenkat515@gmail.com}{\raisebox{-0.2\height}\faEnvelope\ \underline{bhargavvvenkat515@gmail.com}} ~ 
             \href{https://linkedin.com}{\raisebox{-0.2\height}\faLinkedinSquare\ \underline{linkedin.com}}  ~
             \href{https://github.com}{\raisebox{-0.2\height}\faGithub\ \underline{github.com}} ~
             \vspace{-8pt}
@@ -160,8 +160,12 @@
         \resumeSubHeadingListStart
           
               \resumeSubheading
-                {}{ -- }
-                { - \textbf{CGPA} - \textbf{}} {,}
+                {Vishnu}{2024-06 -- 2024-08}
+                {Engineering - \textbf{CGPA} - \textbf{9.23}} {Jrg,india}
+            
+              \resumeSubheading
+                {Vidyavikas}{2024-05 -- 2024-05}
+                {mpc - \textbf{CGPA} - \textbf{98.8}} {jrg,india}
             
         \resumeSubHeadingListEnd
     
@@ -170,7 +174,11 @@
         \begin{multicols}{4}
             \begin{itemize}[itemsep=-2pt, parsep=5pt]
                 
-                    \item 
+                    \item Dbms
+                  
+                    \item Java
+                  
+                    \item C++
                   
             \end{itemize}
         \end{multicols}
@@ -182,11 +190,20 @@
         \resumeSubHeadingListStart
           
               \resumeProjectHeading
-                {\href{https://}{\textbf{\large{\underline{}}} \href{https://}{\raisebox{-0.1\height}\faExternalLink }} $|$ \large{\underline{}} }{}
+                {\href{https://link.com}{\textbf{\large{\underline{project1}}} \href{https://link.com}{\raisebox{-0.1\height}\faExternalLink }} $|$ \large{\underline{mern node java}} }{2024-05}
               \resumeItemListStart
-                \resumeItem{\normalsize{}}
-                \resumeItem{\normalsize{}}
-                \resumeItem{\normalsize{}}
+                \resumeItem{\normalsize{poni1}}
+                \resumeItem{\normalsize{poni2}}
+                \resumeItem{\normalsize{point3}}
+              \resumeItemListEnd
+              \vspace{-13pt}
+            
+              \resumeProjectHeading
+                {\href{https://facebook.com}{\textbf{\large{\underline{Project2}}} \href{https://facebook.com}{\raisebox{-0.1\height}\faExternalLink }} $|$ \large{\underline{python flask}} }{2024-06}
+              \resumeItemListStart
+                \resumeItem{\normalsize{Het this is my python project}}
+                \resumeItem{\normalsize{It is bbuilt using ython java flasj=k and iis integrated with open source apis like chatgpt and ml pipelines }}
+                \resumeItem{\normalsize{This is my best project}}
               \resumeItemListEnd
               \vspace{-13pt}
             
@@ -194,17 +211,17 @@
         \vspace{-12pt}
     
         %-----------EXPERIENCE-----------
-        \section{INTERNSHIP}
+         \section{INTERNSHIP}
         \vspace{-5pt}
         \resumeSubHeadingListStart
           
               \resumeSubheading
-                { \href{https://}{\raisebox{-0.1\height}\faExternalLink }}{ -- }
-                {\underline{}}{}
+                {Tutedude \href{https://tutedude.com}{\raisebox{-0.1\height}\faExternalLink }}{2024-06 -- 2024-06}
+                {\underline{Intern}}{Lucknow}
               \resumeItemListStart
-                \resumeItem{\normalsize{}}
-                \resumeItem{\normalsize{}}
-                \resumeItem{\normalsize{}}
+                \resumeItem{\normalsize{This is my first internship as full stack developer}}
+                \resumeItem{\normalsize{I have collaborated with team to create ood websites and integrated the code}}
+                \resumeItem{\normalsize{I have learnt good knowlege from ths}}
               \resumeItemListEnd
             
         \resumeSubHeadingListEnd
@@ -213,32 +230,28 @@
         %-----------PROGRAMMING SKILLS-----------
         \section{TECHNICAL SKILLS}
         \begin{itemize}[leftmargin=0.15in, label={}]
-          \small{\item{
-            \textbf{\normalsize{Languages:}}{ \normalsize{}} \\
-            \textbf{\normalsize{Developer Tools:}}{ \normalsize{}} \\
-            \textbf{\normalsize{Technologies/Frameworks:}}{\normalsize{}} \\
-          }}
-        \end{itemize}
-        \vspace{-15pt}
+          \small{\item{ \textbf{\normalsize{Languages:}}{ \normalsize{java}} \\\textbf{\normalsize{Developer Tools:}}{ \normalsize{Github, Gitlab, Docker}} \\\textbf{\normalsize{Technologies/Frameworks:}}{\normalsize{Git, Flutter, Html}} \\ }}
+         \end{itemize}
+         \vspace{-15pt}
     
         %-----------INVOLVEMENT---------------
         \section{EXTRACURRICULAR}
-        \resumeSubHeadingListStart
-          
-              \resumeSubheading{ \href{https://}{\raisebox{-0.1\height}\faExternalLink } }{ -- }{\underline{}}{}
-              \resumeItemListStart
-                \resumeItem{\normalsize{}}
-                \resumeItem{\normalsize{Participation Certificate. \href{https://}{\raisebox{-0.1\height}\faExternalLink }}}
-              \resumeItemListEnd
+          \resumeSubHeadingListStart
             
-        \resumeSubHeadingListEnd
-        \vspace{-11pt}
-    
+                \resumeSubheading{extra \href{https://link.com}{\raisebox{-0.1\height}\faExternalLink } }{2024-05 -- 2024-05}{\underline{intern}}{location}
+                \resumeItemListStart
+                  \resumeItem{\normalsize{desc}}
+                  \resumeItem{\normalsize{Participation Certificate. \href{https://link.com}{\raisebox{-0.1\height}\faExternalLink }}}
+                \resumeItemListEnd
+              
+          \resumeSubHeadingListEnd
+          \vspace{-11pt}
+      
         %-----------CERTIFICATIONS---------------
         \section{CERTIFICATIONS}
-        
-            $\sbullet[.75] \hspace{0.1cm}$ {\href{https://}{}} \hspace{1.45cm}
           
+              $\sbullet[.75] \hspace{0.1cm}$ {\href{https://certificate.com}{This is my certifcation}} \hspace{1.45cm}
+            
     
         \end{document}
       
