Rmoved fontawesome package

--- a/output.tex
+++ b/output.tex
@@ -11,7 +11,6 @@
       \usepackage{latexsym}
       \usepackage[empty]{fullpage}
       \usepackage{titlesec}
-      \usepackage{marvosym}
       \usepackage[usenames,dvipsnames]{color}
       \usepackage{verbatim}
       \usepackage{enumitem}
@@ -26,7 +25,6 @@
       
       \RequirePackage{tikz}
       \RequirePackage{xcolor}
-      \RequirePackage{fontawesome}
       \usepackage{tikz}
       \usetikzlibrary{svg.path}
       
@@ -149,9 +147,10 @@
         \begin{center}
             {\Huge \scshape Kumar} \\ \vspace{1pt}
             Jangareddigudem,Andhra \\ \vspace{1pt}
-            \small \href{tel:+123445}{ \raisebox{-0.1\height}\faPhone\ \underline{+123445} ~} \href{mailto:bhargavvvenkat515@gmail.com}{\raisebox{-0.2\height}\faEnvelope\ \underline{bhargavvvenkat515@gmail.com}} ~ 
-            \href{https://linkedin.com}{\raisebox{-0.2\height}\faLinkedinSquare\ \underline{linkedin.com}}  ~
-            \href{https://github.com}{\raisebox{-0.2\height}\faGithub\ \underline{github.com}} ~
+            \small \href{tel:+123445}{{\raisebox{-0.1\height}{\underline{+123445}}} ~} \href{mailto:bhargavvvenkat515@gmail.com}{{\raisebox{-0.2\height}{\underline{bhargavvvenkat515@gmail.com}}} ~} \href{https://linkedin.com}{{\raisebox{-0.2\height} {\underline{LinkedIn}}} ~} \href{https://github.com}{{\raisebox{-0.2\height} {\underline{Github}}} ~}
+
+      
+            
             \vspace{-8pt}
         \end{center}
     
@@ -160,11 +159,11 @@
         \resumeSubHeadingListStart
           
               \resumeSubheading
-                {Vishnu}{2024-06 -- 2024-08}
+                {Vishnu}{2024-01 -- 2024-05}
                 {Engineering - \textbf{CGPA} - \textbf{9.23}} {Jrg,india}
             
               \resumeSubheading
-                {Vidyavikas}{2024-05 -- 2024-05}
+                {Vidyavikas}{2024-05 -- 2024-07}
                 {mpc - \textbf{CGPA} - \textbf{98.8}} {jrg,india}
             
         \resumeSubHeadingListEnd
@@ -174,11 +173,9 @@
         \begin{multicols}{4}
             \begin{itemize}[itemsep=-2pt, parsep=5pt]
                 
-                    \item Dbms
+                    \item java
                   
-                    \item Java
-                  
-                    \item C++
+                    \item java
                   
             \end{itemize}
         \end{multicols}
@@ -190,20 +187,11 @@
         \resumeSubHeadingListStart
           
               \resumeProjectHeading
-                {\href{https://link.com}{\textbf{\large{\underline{project1}}} \href{https://link.com}{\raisebox{-0.1\height}\faExternalLink }} $|$ \large{\underline{mern node java}} }{2024-05}
+                {\href{https://hi.com}{\textbf{\large{\underline{project1}}} \href{https://hi.com}{\raisebox{-0.1\height} }} $|$ \large{\underline{mern node java}} }{2024-05}
               \resumeItemListStart
-                \resumeItem{\normalsize{poni1}}
-                \resumeItem{\normalsize{poni2}}
-                \resumeItem{\normalsize{point3}}
-              \resumeItemListEnd
-              \vspace{-13pt}
-            
-              \resumeProjectHeading
-                {\href{https://facebook.com}{\textbf{\large{\underline{Project2}}} \href{https://facebook.com}{\raisebox{-0.1\height}\faExternalLink }} $|$ \large{\underline{python flask}} }{2024-06}
-              \resumeItemListStart
-                \resumeItem{\normalsize{Het this is my python project}}
-                \resumeItem{\normalsize{It is bbuilt using ython java flasj=k and iis integrated with open source apis like chatgpt and ml pipelines }}
-                \resumeItem{\normalsize{This is my best project}}
+                \resumeItem{\normalsize{This is first point of my project}}
+                \resumeItem{\normalsize{This is first point of my project}}
+                \resumeItem{\normalsize{This is first point of my project}}
               \resumeItemListEnd
               \vspace{-13pt}
             
@@ -216,12 +204,12 @@
         \resumeSubHeadingListStart
           
               \resumeSubheading
-                {Tutedude \href{https://tutedude.com}{\raisebox{-0.1\height}\faExternalLink }}{2024-06 -- 2024-06}
-                {\underline{Intern}}{Lucknow}
+                {Tutedude \href{https://link.com}{Link}}{2024-05 -- 2024-05}
+                {\underline{intern}}{india}
               \resumeItemListStart
-                \resumeItem{\normalsize{This is my first internship as full stack developer}}
-                \resumeItem{\normalsize{I have collaborated with team to create ood websites and integrated the code}}
-                \resumeItem{\normalsize{I have learnt good knowlege from ths}}
+                \resumeItem{\normalsize{I have worked as a full stcak developer in this company}}
+                \resumeItem{\normalsize{I have worked as a full stcak developer in this company}}
+                \resumeItem{\normalsize{I have worked as a full stcak developer in this company}}
               \resumeItemListEnd
             
         \resumeSubHeadingListEnd
@@ -230,7 +218,7 @@
         %-----------PROGRAMMING SKILLS-----------
         \section{TECHNICAL SKILLS}
         \begin{itemize}[leftmargin=0.15in, label={}]
-          \small{\item{ \textbf{\normalsize{Languages:}}{ \normalsize{java}} \\\textbf{\normalsize{Developer Tools:}}{ \normalsize{Github, Gitlab, Docker}} \\\textbf{\normalsize{Technologies/Frameworks:}}{\normalsize{Git, Flutter, Html}} \\ }}
+          \small{\item{ \textbf{\normalsize{Languages:}}{ \normalsize{java, c++}} \\ }}
          \end{itemize}
          \vspace{-15pt}
     
@@ -238,20 +226,17 @@
         \section{EXTRACURRICULAR}
           \resumeSubHeadingListStart
             
-                \resumeSubheading{extra \href{https://link.com}{\raisebox{-0.1\height}\faExternalLink } }{2024-05 -- 2024-05}{\underline{intern}}{location}
+                \resumeSubheading{extra \href{https://link.com}{\raisebox{-0.1\height} } }{2024-05 -- 2024-05}{\underline{intern}}{location}
                 \resumeItemListStart
                   \resumeItem{\normalsize{desc}}
-                  \resumeItem{\normalsize{Participation Certificate. \href{https://link.com}{\raisebox{-0.1\height}\faExternalLink }}}
+                  \resumeItem{\normalsize{Participation Certificate. \href{https://link.com}{\raisebox{-0.1\height} }}}
                 \resumeItemListEnd
               
           \resumeSubHeadingListEnd
           \vspace{-11pt}
       
         %-----------CERTIFICATIONS---------------
-        \section{CERTIFICATIONS}
-          
-              $\sbullet[.75] \hspace{0.1cm}$ {\href{https://certificate.com}{This is my certifcation}} \hspace{1.45cm}
-            
+        
     
         \end{document}
       
