Added icons as images

--- a/output.tex
+++ b/output.tex
@@ -147,10 +147,14 @@
         \begin{center}
             {\Huge \scshape Kumar} \\ \vspace{1pt}
             Jangareddigudem,Andhra \\ \vspace{1pt}
-            \small \href{tel:+123445}{{\raisebox{-0.1\height}{\underline{+123445}}} ~} \href{mailto:bhargavvvenkat515@gmail.com}{{\raisebox{-0.2\height}{\underline{bhargavvvenkat515@gmail.com}}} ~} \href{https://linkedin.com}{{\raisebox{-0.2\height} {\underline{LinkedIn}}} ~} \href{https://github.com}{{\raisebox{-0.2\height} {\underline{Github}}} ~}
-
-      
-            
+            \small 
+            \href{tel:+8179327201}{\includegraphics[height=1em]{phone_icon}}\hspace{0.2em}\raisebox{+0.4\height}{\underline{+8179327201}} ~
+            \href{mailto:bhargavvenkat515@gmail.com}{\includegraphics[height=1em]{email_icon}}\hspace{0.2em}\raisebox{+0.4\height}{\underline{bhargavvenkat515@gmail.com}} ~ 
+            \href{https://www.linkedin.com/in/bhargav-venkat-polireddy-77153221b/}{\includegraphics[height=1em]{linkedin_icon}}\hspace{0.2em}\raisebox{+0.3\height}{\underline{LinkedIn}} ~
+            \href{github.com/BhargavAlpha}{\includegraphics[height=1em]{github_icon}}\hspace{0.2em}\raisebox{+0.3\height}{\underline{GitHub}} ~
+            \href{hackerrank.com}{\includegraphics[height=1em]{hackerrank_icon}}\hspace{0.2em}\raisebox{+0.4\height}{\underline{Hackerrank}} ~
+            \href{codeforces.com}{\includegraphics[height=1em]{codeforces_icon}}\hspace{0.2em}\raisebox{+0.4\height}{\underline{Codeforces}} ~
+         
             \vspace{-8pt}
         \end{center}
     
@@ -159,12 +163,12 @@
         \resumeSubHeadingListStart
           
               \resumeSubheading
-                {Vishnu}{2024-01 -- 2024-05}
-                {Engineering - \textbf{CGPA} - \textbf{9.23}} {Jrg,india}
+                {Vishnu Institute Of Technology}{2024-06 -- 2024-05}
+                {B.Tech - \textbf{CGPA} - \textbf{9.23}} {Bhimavaram,India}
             
               \resumeSubheading
-                {Vidyavikas}{2024-05 -- 2024-07}
-                {mpc - \textbf{CGPA} - \textbf{98.8}} {jrg,india}
+                {Vidyavikas}{2024-05 -- 2024-05}
+                {MPC - \textbf{CGPA} - \textbf{98.8}} {Jangareddigudem,India}
             
         \resumeSubHeadingListEnd
     
@@ -173,68 +177,46 @@
         \begin{multicols}{4}
             \begin{itemize}[itemsep=-2pt, parsep=5pt]
                 
-                    \item java
+                    \item Java
                   
-                    \item java
+                    \item C++
+                  
+                    \item DBMS
                   
             \end{itemize}
         \end{multicols}
         \vspace*{2.0\multicolsep}
     
         %-----------PROJECTS-----------
-        \section{PROJECTS}
-        \vspace{-5pt}
-        \resumeSubHeadingListStart
-          
-              \resumeProjectHeading
-                {\href{https://hi.com}{\textbf{\large{\underline{project1}}} \href{https://hi.com}{\raisebox{-0.1\height} }} $|$ \large{\underline{mern node java}} }{2024-05}
-              \resumeItemListStart
-                \resumeItem{\normalsize{This is first point of my project}}
-                \resumeItem{\normalsize{This is first point of my project}}
-                \resumeItem{\normalsize{This is first point of my project}}
-              \resumeItemListEnd
-              \vspace{-13pt}
-            
-        \resumeSubHeadingListEnd
-        \vspace{-12pt}
+        
+%-----------PROJECTS-----------
+\section{PROJECTS}
+\vspace{-5pt}
+\resumeSubHeadingListStart
+  
+      \resumeProjectHeading
+      {\textbf{\large{\underline{Swiptroy}}} $|$ {\underline{ReactJs NodeJs ExpressJs MongoDb}}}{2024-05}
+      \resumeItemListStart
+       \resumeItem{\normalsize{Astory viewing and sharing platform  where users can create stories and bookmark  others stories. Users can view stories based  on category}} 
+        \resumeItem{\normalsize{ This Website is Completely Responsive and  contains Login, Sign in, and Logout Function ality, Uses Hashing for password encryption  using bcrypt.js.}}
+        
+        \resumeItem{\href{https://link.com}{\textcolor{accent}{\underline{\normalsize{Live site here}}}}} 
+      \resumeItemListEnd
+      \vspace{-13pt}
+    
+     \vspace{13pt}
+\resumeSubHeadingListEnd
+\vspace{-12pt}
+
     
         %-----------EXPERIENCE-----------
-         \section{INTERNSHIP}
-        \vspace{-5pt}
-        \resumeSubHeadingListStart
-          
-              \resumeSubheading
-                {Tutedude \href{https://link.com}{Link}}{2024-05 -- 2024-05}
-                {\underline{intern}}{india}
-              \resumeItemListStart
-                \resumeItem{\normalsize{I have worked as a full stcak developer in this company}}
-                \resumeItem{\normalsize{I have worked as a full stcak developer in this company}}
-                \resumeItem{\normalsize{I have worked as a full stcak developer in this company}}
-              \resumeItemListEnd
-            
-        \resumeSubHeadingListEnd
-        \vspace{-12pt}
+         
     
         %-----------PROGRAMMING SKILLS-----------
-        \section{TECHNICAL SKILLS}
-        \begin{itemize}[leftmargin=0.15in, label={}]
-          \small{\item{ \textbf{\normalsize{Languages:}}{ \normalsize{java, c++}} \\ }}
-         \end{itemize}
-         \vspace{-15pt}
+        
     
         %-----------INVOLVEMENT---------------
-        \section{EXTRACURRICULAR}
-          \resumeSubHeadingListStart
-            
-                \resumeSubheading{extra \href{https://link.com}{\raisebox{-0.1\height} } }{2024-05 -- 2024-05}{\underline{intern}}{location}
-                \resumeItemListStart
-                  \resumeItem{\normalsize{desc}}
-                  \resumeItem{\normalsize{Participation Certificate. \href{https://link.com}{\raisebox{-0.1\height} }}}
-                \resumeItemListEnd
-              
-          \resumeSubHeadingListEnd
-          \vspace{-11pt}
-      
+        
         %-----------CERTIFICATIONS---------------
         
     
