--- a/output.tex
+++ b/output.tex
@@ -150,11 +150,11 @@
             \small 
             \href{tel:+8179327201}{\includegraphics[height=1em]{phone_icon}}\hspace{0.2em}\raisebox{+0.4\height}{\underline{+8179327201}} ~
             \href{mailto:bhargavvenkat515@gmail.com}{\includegraphics[height=1em]{email_icon}}\hspace{0.2em}\raisebox{+0.4\height}{\underline{bhargavvenkat515@gmail.com}} ~ 
-            \href{https://www.linkedin.com/in/bhargav-venkat-polireddy-77153221b/}{\includegraphics[height=1em]{linkedin_icon}}\hspace{0.2em}\raisebox{+0.3\height}{\underline{LinkedIn}} ~
-            \href{github.com/BhargavAlpha}{\includegraphics[height=1em]{github_icon}}\hspace{0.2em}\raisebox{+0.3\height}{\underline{GitHub}} ~
-             ~
-             ~
-         
+            \href{https://www.linkedin.com/in/bhargav-venkat-polireddy-77153221b/}{\includegraphics[height=1em]{linkedin_icon}}\hspace{0.2em}\raisebox{+0.3\height}{\underline{\href{https://www.linkedin.com/in/bhargav-venkat-polireddy-77153221b/}{LinkedIn}}} ~
+\href{https://github.com/BhargavAlpha}{\includegraphics[height=1em]{github_icon}}\hspace{0.2em}\raisebox{+0.3\height}{\underline{\href{https://github.com/BhargavAlpha}{GitHub}}} ~
+ ~
+ ~
+
             \vspace{-8pt}
         \end{center}
     
@@ -202,7 +202,9 @@
        \resumeItem{\normalsize{Astory viewing and sharing platform  where users can create stories and bookmark  others stories. Users can view stories based  on category}} 
         \resumeItem{\normalsize{ This Website is Completely Responsive and  contains Login, Sign in, and Logout Function ality, Uses Hashing for password encryption  using bcrypt.js.}}
         \resumeItem{\normalsize{This is first point of my project}}
-        \resumeItem{\href{https://swiptroy.com}{\textcolor{accent}{\underline{\normalsize{Live site here}}}}} 
+        \resumeItem{\href{https://swiptroy.com}{\textcolor{accent}{\underline{\normalsize{Live site here}}}}}
+
+
       \resumeItemListEnd
       \vspace{-13pt}
     
@@ -212,7 +214,9 @@
        \resumeItem{\normalsize{ Built a fully functional Blogging Website  where users can read and create blogs their  own blogs. }} 
         \resumeItem{\normalsize{ Functionalities include adding  comments and editing posts }}
         \resumeItem{\normalsize{point3 sjdbsibdhs s shhsd kjs das s sjdks ckjsd}}
-        \resumeItem{\href{https://https://blogbook-frontend.vercel.app/}{\textcolor{accent}{\underline{\normalsize{Live site here}}}}} 
+        \resumeItem{\href{https://blogbook-frontend.vercel.app/}{\textcolor{accent}{\underline{\normalsize{Live site here}}}}}
+
+
       \resumeItemListEnd
       \vspace{-13pt}
     
@@ -264,7 +268,7 @@
         %-----------CERTIFICATIONS---------------
         \section{CERTIFICATIONS}
           
-              $\sbullet[.75] \hspace{0.1cm}$ {{Coding Ninjas}}\hspace{0.04cm} \href{codingninjas.com}{\includegraphics[height=1em]{link_icon}}
+              $\sbullet[.75] \hspace{0.1cm}$ {{Coding Ninjas}}\hspace{0.04cm} \href{https://codingninjas.com}{\includegraphics[height=1em]{link_icon}}
             
               $\sbullet[.75] \hspace{0.1cm}$ {{Cuvette}}\hspace{0.04cm} 
             
