--- a/output.tex
+++ b/output.tex
@@ -145,13 +145,13 @@
       %----------HEADING----------
     
         \begin{center}
-            {\Huge \scshape Bhargav Venkat} \\ \vspace{1pt}
-            Jangareddigudem,Andhra Pradesh \\ \vspace{1pt}
+            {\Huge \scshape Bhavya Noubattula} \\ \vspace{1pt}
+            Hyderabad,Telangana \\ \vspace{1pt}
             \small 
-            \href{tel:+8179327201}{\includegraphics[height=1em]{phone_icon}}\hspace{0.2em}\raisebox{+0.4\height}{\underline{+8179327201}} ~
-            \href{mailto:bhargavvenkat515@gmail.com}{\includegraphics[height=1em]{email_icon}}\hspace{0.2em}\raisebox{+0.4\height}{\underline{bhargavvenkat515@gmail.com}} ~ 
-            \href{https://www.linkedin.com/in/bhargav-venkat-polireddy-77153221b/}{\includegraphics[height=1em]{linkedin_icon}}\hspace{0.2em}\raisebox{+0.3\height}{\underline{\href{https://www.linkedin.com/in/bhargav-venkat-polireddy-77153221b/}{LinkedIn}}} ~
-\href{https://github.com/BhargavAlpha}{\includegraphics[height=1em]{github_icon}}\hspace{0.2em}\raisebox{+0.3\height}{\underline{\href{https://github.com/BhargavAlpha}{GitHub}}} ~
+           \href{tel:+90140}{\includegraphics[height=1em]{phone_icon}}\hspace{0.2em}\raisebox{+0.4\height}{\underline{+90140}} ~
+          \href{mailto:bhavya@gmail.com}{\includegraphics[height=1em]{email_icon}}\hspace{0.2em}\raisebox{+0.4\height}{\underline{bhavya@gmail.com}} ~ 
+             ~
+             ~
  ~
  ~
 
@@ -163,31 +163,13 @@
         \resumeSubHeadingListStart
           
               \resumeSubheading
-                {Vishnu Institute Of Technology}{2024-05 -- 2024-05}
-                {B.Tech - \textbf{CGPA} - \textbf{9.23}} {Bhimavaram,India}
-            
-              \resumeSubheading
-                {Vidyavikas}{2024-01 -- 2024-05}
-                {MPC - \textbf{CGPA} - \textbf{98.8}} {Jangareddigudem,India}
+                {Vishnu Institute Of Techhnology}{11/2021 -- 06/2025}
+                {B.Tech - \textbf{CGPA} - \textbf{10}} {Jangareddigudem}
             
         \resumeSubHeadingListEnd
     
         %------RELEVANT COURSEWORK-------
-        \section{COURSEWORK / SKILLS}
-        \begin{multicols}{4}
-            \begin{itemize}[itemsep=-2pt, parsep=5pt]
-                
-                    \item Java
-                  
-                    \item C++
-                  
-                    \item Python
-                  
-                    \item DBMS
-                  
-            \end{itemize}
-        \end{multicols}
-        \vspace*{2.0\multicolsep}
+        
     
         %-----------PROJECTS-----------
         
@@ -197,24 +179,12 @@
 \resumeSubHeadingListStart
   
       \resumeProjectHeading
-      {\textbf{\large{\underline{Swiptroy}}} $|$ {\underline{mern node java}}}{2024-05}
+      {\textbf{\large{\underline{Online Gaming App}}} $|$ {\underline{React NodeJs}}}{12/2024}
       \resumeItemListStart
-       \resumeItem{\normalsize{Astory viewing and sharing platform  where users can create stories and bookmark  others stories. Users can view stories based  on category}} 
-        \resumeItem{\normalsize{ This Website is Completely Responsive and  contains Login, Sign in, and Logout Function ality, Uses Hashing for password encryption  using bcrypt.js.}}
-        \resumeItem{\normalsize{This is first point of my project}}
-        \resumeItem{\href{https://swiptroy.com}{\textcolor{accent}{\underline{\normalsize{Live site here}}}}}
-
-
-      \resumeItemListEnd
-      \vspace{-13pt}
-    
-      \resumeProjectHeading
-      {\textbf{\large{\underline{Blog Book}}} $|$ {\underline{ReactJs ExpressJs MongoDB Tailwind}}}{2024-05}
-      \resumeItemListStart
-       \resumeItem{\normalsize{ Built a fully functional Blogging Website  where users can read and create blogs their  own blogs. }} 
-        \resumeItem{\normalsize{ Functionalities include adding  comments and editing posts }}
-        \resumeItem{\normalsize{point3 sjdbsibdhs s shhsd kjs das s sjdks ckjsd}}
-        \resumeItem{\href{https://blogbook-frontend.vercel.app/}{\textcolor{accent}{\underline{\normalsize{Live site here}}}}}
+       
+            \resumeItem{\normalsize{This is point1 of my description}}
+         
+        \resumeItem{\href{https://github.com}{\textcolor{accent}{\underline{\normalsize{Live site here}}}}}
 
 
       \resumeItemListEnd
@@ -227,51 +197,32 @@
     
         %-----------EXPERIENCE-----------
          \section{INTERNSHIP}
-        \resumeSubHeadingListStart
-          
-            \resumeSubheading
-            {Tutedude $|$ {\href{https://link.com}{\textcolor{accent}{\underline{\normalsize{Link}}}}}}{2024-05 -- 2024-05}
-            {\underline{ Frontend Development Intern}}{Remote}          
-              \resumeItemListStart
-                \resumeItem{\normalsize{I have worked as a full stcak developer in this company}}
-                \resumeItem{\normalsize{Working with the team on the design, development, and Inte gration of API.}}
-                \resumeItem{\normalsize{ Optimised the Existing Code using React Hooks like useMemo  Hook useCallback Hook.}}
-              \resumeItemListEnd
-            
-        \resumeSubHeadingListEnd
-        \vspace{-12pt}
+  \resumeSubHeadingListStart
+    
+        \resumeSubheading
+        {Google  }{05/2024 -- 08/2025}
+        {\underline{Developer}}{undefined}          
+        \resumeItemListStart
+          \resumeItem{\normalsize{This is point1 of my description}}
+        \resumeItemListEnd
+      
+        \resumeSubheading
+        {Microsoft  }{05/2024 -- 08/2024}
+        {\underline{Data Analyst}}{undefined}          
+        \resumeItemListStart
+          \resumeItem{\normalsize{This is ppint1}}
+        \resumeItemListEnd
+      
+  \resumeSubHeadingListEnd
+  \vspace{-12pt}
     
         %-----------PROGRAMMING SKILLS-----------
-        \section{TECHNICAL SKILLS}
-        \begin{itemize}[leftmargin=0.15in, label={}]
-          \small{\item{ \textbf{\normalsize{Languages:}}{ \normalsize{Java, C++, Javascript, Python}} \\\textbf{\normalsize{Developer Tools:}}{ \normalsize{github, Docker}} \\\textbf{\normalsize{Technologies/Frameworks:}}{\normalsize{Html}} \\ }}
-         \end{itemize}
-         \vspace{-15pt}
+        
     
         %-----------INVOLVEMENT---------------
-        \section{EXTRACURRICULAR}
-          \resumeSubHeadingListStart
-            
-              \resumeSubheading{Participated in SIH 2022 }{2024-05 -- 2024-05}{\underline{Team Lead}}{Bhimavaram}
-                \resumeItemListStart
-                  \resumeItem{\normalsize{Worked on Frontend }}
-                \resumeItemListEnd
-              
-              \resumeSubheading{Participated in SIH 2023 \href{https://link.com}{\includegraphics[height=1em]{link_icon}\raisebox{+0.4\height}}}{2024-05 -- 2024-05}{\underline{Team Lead}}{Bhimavaram}
-                \resumeItemListStart
-                  \resumeItem{\normalsize{Backend Dev}}
-                \resumeItemListEnd
-              
-          \resumeSubHeadingListEnd
-          \vspace{-11pt}
-      
+        
         %-----------CERTIFICATIONS---------------
-        \section{CERTIFICATIONS}
-          
-              $\sbullet[.75] \hspace{0.1cm}$ {{Coding Ninjas}}\hspace{0.04cm} \href{https://codingninjas.com}{\includegraphics[height=1em]{link_icon}}
-            
-              $\sbullet[.75] \hspace{0.1cm}$ {{Cuvette}}\hspace{0.04cm} 
-            
+        
     
         \end{document}
       
