some model changes

--- a/output.tex
+++ b/output.tex
@@ -145,11 +145,11 @@
       %----------HEADING----------
     
         \begin{center}
-            {\Huge \scshape Bhavya Noubattula} \\ \vspace{1pt}
-            Hyderabad,Telangana \\ \vspace{1pt}
+            {\Huge \scshape BhARGAV pOLIREDDY} \\ \vspace{1pt}
+            hyderabad,telangana \\ \vspace{1pt}
             \small 
-           \href{tel:+90140}{\includegraphics[height=1em]{phone_icon}}\hspace{0.2em}\raisebox{+0.4\height}{\underline{+90140}} ~
-          \href{mailto:bhavya@gmail.com}{\includegraphics[height=1em]{email_icon}}\hspace{0.2em}\raisebox{+0.4\height}{\underline{bhavya@gmail.com}} ~ 
+           \href{tel:+2838Y82}{\includegraphics[height=1em]{phone_icon}}\hspace{0.2em}\raisebox{+0.4\height}{\underline{+2838Y82}} ~
+          \href{mailto:test@gmail.com}{\includegraphics[height=1em]{email_icon}}\hspace{0.2em}\raisebox{+0.4\height}{\underline{test@gmail.com}} ~ 
              ~
              ~
  ~
@@ -163,8 +163,16 @@
         \resumeSubHeadingListStart
           
               \resumeSubheading
-                {Vishnu Institute Of Techhnology}{11/2021 -- 06/2025}
-                {B.Tech - \textbf{CGPA} - \textbf{10}} {Jangareddigudem}
+                {Vidyavikas}{08/2024 -- 05/2025}
+                {MPC - \textbf{CGPA} - \textbf{10}} {West Godavari}
+            
+              \resumeSubheading
+                {B.V Raju College Of Engineering Women}{05/2024 -- 05/2024}
+                {MPC - \textbf{CGPA} - \textbf{10}} {West Godavari}
+            
+              \resumeSubheading
+                {B.V Raju College Of Engineering Women}{05/2024 -- 05/2024}
+                {MPC - \textbf{CGPA} - \textbf{10}} {Jangareddigudem}
             
         \resumeSubHeadingListEnd
     
@@ -179,12 +187,28 @@
 \resumeSubHeadingListStart
   
       \resumeProjectHeading
-      {\textbf{\large{\underline{Online Gaming App}}} $|$ {\underline{React NodeJs}}}{12/2024}
+      {\textbf{\large{\underline{Online Gaming App}}} $|$ {\underline{React NodeJs}}}{06/2024}
       \resumeItemListStart
        
             \resumeItem{\normalsize{This is point1 of my description}}
+         ,
+            \resumeItem{\normalsize{This is an online gaming app}}
          
-        \resumeItem{\href{https://github.com}{\textcolor{accent}{\underline{\normalsize{Live site here}}}}}
+        
+
+
+      \resumeItemListEnd
+      \vspace{-13pt}
+    
+      \resumeProjectHeading
+      {\textbf{\large{\underline{Online Gaming App2}}} $|$ {\underline{React NodeJs}}}{05/2024}
+      \resumeItemListStart
+       
+            \resumeItem{\normalsize{This is an online gaming app}}
+         ,
+            \resumeItem{\normalsize{This is an online gaming app}}
+         
+        
 
 
       \resumeItemListEnd
@@ -200,17 +224,17 @@
   \resumeSubHeadingListStart
     
         \resumeSubheading
-        {Google  }{05/2024 -- 08/2025}
+        {Google  }{05/2024 -- 05/2024}
         {\underline{Developer}}{undefined}          
         \resumeItemListStart
-          \resumeItem{\normalsize{This is point1 of my description}}
+          \resumeItem{\normalsize{This is point1 of my description}},\resumeItem{\normalsize{This is an online gaming app}}
         \resumeItemListEnd
       
         \resumeSubheading
-        {Microsoft  }{05/2024 -- 08/2024}
-        {\underline{Data Analyst}}{undefined}          
+        {Miccrosoft  }{05/2024 -- 05/2024}
+        {\underline{Ui Designer}}{undefined}          
         \resumeItemListStart
-          \resumeItem{\normalsize{This is ppint1}}
+          \resumeItem{\normalsize{This is an online gaming app}},\resumeItem{\normalsize{This is an online gaming app}}
         \resumeItemListEnd
       
   \resumeSubHeadingListEnd
