Resolved city undefined bug

--- a/output.tex
+++ b/output.tex
@@ -181,60 +181,56 @@
     
         %-----------PROJECTS-----------
         
-%-----------PROJECTS-----------
-\section{PROJECTS}
-\vspace{-5pt}
-\resumeSubHeadingListStart
-  
-      \resumeProjectHeading
-      {\textbf{\large{\underline{Online Gaming App}}} $|$ {\underline{React NodeJs}}}{06/2024}
-      \resumeItemListStart
-       
-            \resumeItem{\normalsize{This is point1 of my description}}
-         ,
-            \resumeItem{\normalsize{This is an online gaming app}}
-         
+    %-----------PROJECTS-----------
+    \section{PROJECTS}
+    \vspace{-5pt}
+    \resumeSubHeadingListStart
+      
+          \resumeProjectHeading
+          {\textbf{\large{\underline{Online Gaming App}}} $|$ {\underline{React NodeJs}}}{06/2024}
+          \resumeItemListStart
+            \resumeItem{\normalsize{This is point1 of my description}}\resumeItem{\normalsize{This is an online gaming app}}\resumeItem{\normalsize{This is point3 of my description}}
+            
+          \resumeItemListEnd
+          \vspace{-13pt}
         
-
-
-      \resumeItemListEnd
-      \vspace{-13pt}
-    
-      \resumeProjectHeading
-      {\textbf{\large{\underline{Online Gaming App2}}} $|$ {\underline{React NodeJs}}}{05/2024}
-      \resumeItemListStart
-       
-            \resumeItem{\normalsize{This is an online gaming app}}
-         ,
-            \resumeItem{\normalsize{This is an online gaming app}}
-         
+          \resumeProjectHeading
+          {\textbf{\large{\underline{Online Gaming App2}}} $|$ {\underline{React NodeJs}}}{05/2024}
+          \resumeItemListStart
+            \resumeItem{\normalsize{This is an online gaming app}}\resumeItem{\normalsize{This is an online gaming app}}
+            
+          \resumeItemListEnd
+          \vspace{-13pt}
         
-
-
-      \resumeItemListEnd
-      \vspace{-13pt}
+          \resumeProjectHeading
+          {\textbf{\large{\underline{BlogBook}}} $|$ {\underline{React NodeJs}}}{05/2024}
+          \resumeItemListStart
+            \resumeItem{\normalsize{Its is a blogging application}}\resumeItem{\normalsize{People can view or edit their own blogs}}
+            
+          \resumeItemListEnd
+          \vspace{-13pt}
+        
+    \vspace{13pt}
+    \resumeSubHeadingListEnd
+    \vspace{-12pt}
     
-     \vspace{13pt}
-\resumeSubHeadingListEnd
-\vspace{-12pt}
-
     
         %-----------EXPERIENCE-----------
          \section{INTERNSHIP}
   \resumeSubHeadingListStart
     
         \resumeSubheading
-        {Google  }{05/2024 -- 05/2024}
-        {\underline{Developer}}{undefined}          
+        {Google}{05/2024 -- 05/2024}
+        {\underline{Developer}}{}         
         \resumeItemListStart
-          \resumeItem{\normalsize{This is point1 of my description}},\resumeItem{\normalsize{This is an online gaming app}}
+          \resumeItem{\normalsize{This is point1 of my description}}\resumeItem{\normalsize{This is an online gaming app}}
         \resumeItemListEnd
       
         \resumeSubheading
-        {Miccrosoft  }{05/2024 -- 05/2024}
-        {\underline{Ui Designer}}{undefined}          
+        {Miccrosoft}{05/2024 -- 05/2024}
+        {\underline{Ui Designer}}{}         
         \resumeItemListStart
-          \resumeItem{\normalsize{This is an online gaming app}},\resumeItem{\normalsize{This is an online gaming app}}
+          \resumeItem{\normalsize{This is an online gaming app}}\resumeItem{\normalsize{This is an online gaming app}}
         \resumeItemListEnd
       
   \resumeSubHeadingListEnd
