placed experience above projects

--- a/output.tex
+++ b/output.tex
@@ -145,10 +145,10 @@
       %----------HEADING----------
     
         \begin{center}
-            {\Huge \scshape BhARGAV pOLIREDDY} \\ \vspace{1pt}
-            hyderabad,telangana \\ \vspace{1pt}
+            {\Huge \scshape test} \\ \vspace{1pt}
+            Hyderabad,Telangana \\ \vspace{1pt}
             \small 
-           \href{tel:+2838Y82}{\includegraphics[height=1em]{phone_icon}}\hspace{0.2em}\raisebox{+0.4\height}{\underline{+2838Y82}} ~
+           \href{tel:+8179327201}{\includegraphics[height=1em]{phone_icon}}\hspace{0.2em}\raisebox{+0.4\height}{\underline{+8179327201}} ~
           \href{mailto:test@gmail.com}{\includegraphics[height=1em]{email_icon}}\hspace{0.2em}\raisebox{+0.4\height}{\underline{test@gmail.com}} ~ 
              ~
              ~
@@ -163,21 +163,27 @@
         \resumeSubHeadingListStart
           
               \resumeSubheading
-                {Vidyavikas}{08/2024 -- 05/2025}
-                {MPC - \textbf{CGPA} - \textbf{10}} {West Godavari}
-            
-              \resumeSubheading
-                {B.V Raju College Of Engineering Women}{05/2024 -- 05/2024}
-                {MPC - \textbf{CGPA} - \textbf{10}} {West Godavari}
-            
-              \resumeSubheading
-                {B.V Raju College Of Engineering Women}{05/2024 -- 05/2024}
+                {B.V Raju College Of Engineering}{05/2024 -- 05/2024}
                 {MPC - \textbf{CGPA} - \textbf{10}} {Jangareddigudem}
             
         \resumeSubHeadingListEnd
     
         %------RELEVANT COURSEWORK-------
         
+
+        %-----------EXPERIENCE-----------
+         \section{EXPERIENCE}
+  \resumeSubHeadingListStart
+    
+        \resumeSubheading
+        {Google}{05/2024 -- 05/2025}
+        {\underline{Intern}}{}         
+        \resumeItemListStart
+          \resumeItem{\normalsize{This is point1 of my description}}\resumeItem{\normalsize{This is point1 of my description}}
+        \resumeItemListEnd
+      
+  \resumeSubHeadingListEnd
+  \vspace{-12pt}
     
         %-----------PROJECTS-----------
         
@@ -187,25 +193,9 @@
     \resumeSubHeadingListStart
       
           \resumeProjectHeading
-          {\textbf{\large{\underline{Online Gaming App}}} $|$ {\underline{React NodeJs}}}{06/2024}
+          {\textbf{\large{\underline{Kumar}}} $|$ {\underline{React NodeJs}}}{05/2024}
           \resumeItemListStart
-            \resumeItem{\normalsize{This is point1 of my description}}\resumeItem{\normalsize{This is an online gaming app}}\resumeItem{\normalsize{This is point3 of my description}}
-            
-          \resumeItemListEnd
-          \vspace{-13pt}
-        
-          \resumeProjectHeading
-          {\textbf{\large{\underline{Online Gaming App2}}} $|$ {\underline{React NodeJs}}}{05/2024}
-          \resumeItemListStart
-            \resumeItem{\normalsize{This is an online gaming app}}\resumeItem{\normalsize{This is an online gaming app}}
-            
-          \resumeItemListEnd
-          \vspace{-13pt}
-        
-          \resumeProjectHeading
-          {\textbf{\large{\underline{BlogBook}}} $|$ {\underline{React NodeJs}}}{05/2024}
-          \resumeItemListStart
-            \resumeItem{\normalsize{Its is a blogging application}}\resumeItem{\normalsize{People can view or edit their own blogs}}
+            \resumeItem{\normalsize{This is point1 of my description}}\resumeItem{\normalsize{This is an online gaming app}}
             
           \resumeItemListEnd
           \vspace{-13pt}
@@ -215,26 +205,7 @@
     \vspace{-12pt}
     
     
-        %-----------EXPERIENCE-----------
-         \section{INTERNSHIP}
-  \resumeSubHeadingListStart
-    
-        \resumeSubheading
-        {Google}{05/2024 -- 05/2024}
-        {\underline{Developer}}{}         
-        \resumeItemListStart
-          \resumeItem{\normalsize{This is point1 of my description}}\resumeItem{\normalsize{This is an online gaming app}}
-        \resumeItemListEnd
-      
-        \resumeSubheading
-        {Miccrosoft}{05/2024 -- 05/2024}
-        {\underline{Ui Designer}}{}         
-        \resumeItemListStart
-          \resumeItem{\normalsize{This is an online gaming app}}\resumeItem{\normalsize{This is an online gaming app}}
-        \resumeItemListEnd
-      
-  \resumeSubHeadingListEnd
-  \vspace{-12pt}
+        
     
         %-----------PROGRAMMING SKILLS-----------
         
