resolved when experience desc is empty and added delete controller

--- a/output.tex
+++ b/output.tex
@@ -148,10 +148,10 @@
             {\Huge \scshape test} \\ \vspace{1pt}
             Hyderabad,Telangana \\ \vspace{1pt}
             \small 
-           \href{tel:+8179327201}{\includegraphics[height=1em]{phone_icon}}\hspace{0.2em}\raisebox{+0.4\height}{\underline{+8179327201}} ~
+           \href{tel:+7263223923}{\includegraphics[height=1em]{phone_icon}}\hspace{0.2em}\raisebox{+0.4\height}{\underline{+7263223923}} ~
           \href{mailto:test@gmail.com}{\includegraphics[height=1em]{email_icon}}\hspace{0.2em}\raisebox{+0.4\height}{\underline{test@gmail.com}} ~ 
-             ~
-             ~
+            \href{https://linkedin.com}{\includegraphics[height=1em]{linkedin_icon}}\hspace{0.2em}\raisebox{+0.4\height}{\underline{\href{https://linkedin.com}{LinkedIn}}} ~
+            \href{https://gihtub.com}{\includegraphics[height=1em]{github_icon}}\hspace{0.2em}\raisebox{+0.4\height}{\underline{\href{https://gihtub.com}{Github}}} ~
  ~
  ~
 
@@ -163,8 +163,8 @@
         \resumeSubHeadingListStart
           
               \resumeSubheading
-                {B.V Raju College Of Engineering}{05/2024 -- 05/2024}
-                {MPC - \textbf{CGPA} - \textbf{10}} {Jangareddigudem}
+                {Vishnu Institute Of Techhnology}{12/2021 -- Present}
+                {B.Tech - \textbf{CGPA} - \textbf{10}} {Jangareddigudem}
             
         \resumeSubHeadingListEnd
     
@@ -175,13 +175,15 @@
          \section{EXPERIENCE}
   \resumeSubHeadingListStart
     
-        \resumeSubheading
-        {Google}{05/2024 -- 05/2025}
-        {\underline{Intern}}{}         
-        \resumeItemListStart
-          \resumeItem{\normalsize{This is point1 of my description}}\resumeItem{\normalsize{This is point1 of my description}}
-        \resumeItemListEnd
-      
+      \resumeSubheading
+      {Google}{06/2021 -- Present}
+      {\underline{Developer}}{}         
+      \resumeItemListStart
+              
+                  \resumeItem{\normalsize{This is point1 of my description}}
+                
+            \resumeItemListEnd
+    
   \resumeSubHeadingListEnd
   \vspace{-12pt}
     
@@ -193,7 +195,7 @@
     \resumeSubHeadingListStart
       
           \resumeProjectHeading
-          {\textbf{\large{\underline{Kumar}}} $|$ {\underline{React NodeJs}}}{05/2024}
+          {\textbf{\large{\underline{Online Gaming App}}} $|$ {\underline{React NodeJs}}}{06/2024}
           \resumeItemListStart
             \resumeItem{\normalsize{This is point1 of my description}}\resumeItem{\normalsize{This is an online gaming app}}
             
@@ -208,12 +210,21 @@
         
     
         %-----------PROGRAMMING SKILLS-----------
-        
+        \section{TECHNICAL SKILLS}
+        \begin{itemize}[leftmargin=0.15in, label={}]
+          \small{\item{ \textbf{\normalsize{Languages:}}{ \normalsize{Java, C++}} \\ }}
+         \end{itemize}
+         \vspace{-15pt}
     
         %-----------INVOLVEMENT---------------
         
         %-----------CERTIFICATIONS---------------
-        
+        \section{CERTIFICATIONS}
+          
+              $\sbullet[.75] \hspace{0.1cm}$ {{Conding ninjas}}\hspace{0.04cm} 
+            
+              $\sbullet[.75] \hspace{0.1cm}$ {{Cuvette}}\hspace{0.04cm} 
+            
     
         \end{document}
       
